--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "nodemailer": "^4.0.1"
+    "nodemailer": "^4.0.1",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "nodemon": "^1.11.0"
+    "gh-pages": "^3.1.0"
   }
 }
